--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   </head>
 
-  <body>
-    <%= yield %>
-  </body>
+  <div class="container">
+    <body>
+      <%= yield %>
+    </body>
+  </div>
 </html>
