--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -18,11 +18,11 @@
         <td><%= restaurant.address %></td>
         <td><%= restaurant.phone_number %></td>
         <td><%= restaurant.category %></td>
-        <td><%= link_to 'Show', restaurant %></td>
+        <td><%= link_to 'Show', restaurant, class: "btn btn-outline-info btn-sm" %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 
-<%= link_to 'Add a new restaurant', new_restaurant_path %>
+<%= link_to 'Add a new restaurant', new_restaurant_path, class: "btn btn-outline-info btn-sm" %>
