--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Reviews#new</h1>
-<p>Find me in app/views/reviews/new.html.erb</p>
+<h1>Add a Review</h1>
+
+<%= simple_form_for([@restaurant, @review]) do |f| %>
+
+  <div class="form-inputs">
+    <%= f.input :content %>
+    <%= f.input :rating, collection: [0, 1, 2, 3, 4, 5] %>
+  </div>
+
+  <div class="form-actions">
+    <%= f.button :submit, class: "btn btn-outline-secondary" %>
+  </div>
+<% end %>
